--- a/tzinfo/CHANGES
+++ b/tzinfo/CHANGES
@@ -1,4 +1,4 @@
-== Version ?????? (tzdata v2009l) - ???????????
+== Version 0.3.14 (tzdata v2009l) - 19-Aug-2009
 
 * Updated to tzdata version 2009l
   (http://article.gmane.org/gmane.comp.time.tz/2818).
