Updated to tzdata version 2009o (http://article.gmane.org/gmane.comp.time.tz/2942).

--- a/tzinfo/CHANGES
+++ b/tzinfo/CHANGES
@@ -1,7 +1,7 @@
-== Version ?????? (tzdata v2009n) - ???????????
+== Version ?????? (tzdata v2009o) - ???????????
 
-* Updated to tzdata version 2009n
-  (http://article.gmane.org/gmane.comp.time.tz/2896).
+* Updated to tzdata version 2009o
+  (http://article.gmane.org/gmane.comp.time.tz/2942).
 
 
 == Version 0.3.14 (tzdata v2009l) - 19-Aug-2009
