Updated to tzdata version 2009p (http://article.gmane.org/gmane.comp.time.tz/2953).

--- a/tzinfo/CHANGES
+++ b/tzinfo/CHANGES
@@ -1,7 +1,7 @@
-== Version ?????? (tzdata v2009o) - ???????????
+== Version ?????? (tzdata v2009p) - ???????????
 
-* Updated to tzdata version 2009o
-  (http://article.gmane.org/gmane.comp.time.tz/2942).
+* Updated to tzdata version 2009p
+  (http://article.gmane.org/gmane.comp.time.tz/2953).
 
 
 == Version 0.3.14 (tzdata v2009l) - 19-Aug-2009
