--- a/tzinfo/CHANGES
+++ b/tzinfo/CHANGES
@@ -1,4 +1,4 @@
-== Version ?????? (tzdata v2009p) - ???????????
+== Version 0.3.15 (tzdata v2009p) - 26-Oct-2009
 
 * Updated to tzdata version 2009p
   (http://article.gmane.org/gmane.comp.time.tz/2953).
