--- a/tzinfo/CHANGES
+++ b/tzinfo/CHANGES
@@ -1,7 +1,9 @@
-== Version ?????? (tzdata v2009p) - ???????????
+== Version ?????? (tzdata v2009u) - ???????????
 
 * Support the use of '-' to denote '0' as an offset. Used for the first time
   in the SAVE field in tzdata v2009u.
+* Updated to tzdata version 2009u
+  (http://article.gmane.org/gmane.comp.time.tz/3053).
 
 
 == Version 0.3.15 (tzdata v2009p) - 26-Oct-2009
