Updated to tzdata version 2010b (http://article.gmane.org/gmane.comp.time.tz/3074).

--- a/tzinfo/CHANGES
+++ b/tzinfo/CHANGES
@@ -1,7 +1,7 @@
-== Version ?????? (tzdata v2010a) - ??????????
+== Version ?????? (tzdata v2010b) - ??????????
 
-* Updated to tzdata version 2010a
-  (http://article.gmane.org/gmane.comp.time.tz/3069).
+* Updated to tzdata version 2010b
+  (http://article.gmane.org/gmane.comp.time.tz/3074).
 
 
 == Version 0.3.16 (tzdata v2009u) - 5-Jan-2010
