Updated to tzdata version 2010c (http://article.gmane.org/gmane.comp.time.tz/3118).

--- a/tzinfo/CHANGES
+++ b/tzinfo/CHANGES
@@ -1,7 +1,7 @@
-== Version ?????? (tzdata v2010b) - ??????????
+== Version ?????? (tzdata v2010c) - ??????????
 
-* Updated to tzdata version 2010b
-  (http://article.gmane.org/gmane.comp.time.tz/3074).
+* Updated to tzdata version 2010c
+  (http://article.gmane.org/gmane.comp.time.tz/3118).
 
 
 == Version 0.3.16 (tzdata v2009u) - 5-Jan-2010
