--- a/tzinfo/CHANGES
+++ b/tzinfo/CHANGES
@@ -1,7 +1,7 @@
-== Version ?????? (tzdata v2010c) - ??????????
+== Version ?????? (tzdata v2010e) - ??????????
 
-* Updated to tzdata version 2010c
-  (http://article.gmane.org/gmane.comp.time.tz/3118).
+* Updated to tzdata version 2010e
+  (http://article.gmane.org/gmane.comp.time.tz/3128).
 
 
 == Version 0.3.16 (tzdata v2009u) - 5-Jan-2010
