--- a/tzinfo/CHANGES
+++ b/tzinfo/CHANGES
@@ -1,4 +1,4 @@
-== Version ?????? (tzdata v2010e) - ??????????
+== Version 0.3.17 (tzdata v2010e) - 8-Mar-2010
 
 * Updated to tzdata version 2010e
   (http://article.gmane.org/gmane.comp.time.tz/3128).
