Updated to tzdata version 2010g (http://article.gmane.org/gmane.comp.time.tz/3172).

--- a/tzinfo/CHANGES
+++ b/tzinfo/CHANGES
@@ -1,7 +1,7 @@
-== Version ?????? (tzdata v2010f) - ??????????
+== Version ?????? (tzdata v2010g) - ??????????
 
-* Updated to tzdata version 2010f
-  (http://article.gmane.org/gmane.comp.time.tz/3159).
+* Updated to tzdata version 2010g
+  (http://article.gmane.org/gmane.comp.time.tz/3172).
 
 
 == Version 0.3.17 (tzdata v2010e) - 8-Mar-2010
