--- a/tzinfo/CHANGES
+++ b/tzinfo/CHANGES
@@ -1,4 +1,4 @@
-== Version ?????? (tzdata v2010g) - ??????????
+== Version 0.3.18 (tzdata v2010g) - 29-Mar-2010
 
 * Updated to tzdata version 2010g
   (http://article.gmane.org/gmane.comp.time.tz/3172).
