Updated to tzdata version 2010h (http://article.gmane.org/gmane.comp.time.tz/3188).

--- a/tzinfo/CHANGES
+++ b/tzinfo/CHANGES
@@ -1,3 +1,9 @@
+== Version ?????? (tzdata v2010h) - ???????????
+
+* Updated to tzdata version 2010h
+  (http://article.gmane.org/gmane.comp.time.tz/3188).
+
+
 == Version 0.3.18 (tzdata v2010g) - 29-Mar-2010
 
 * Updated to tzdata version 2010g
