--- a/tzinfo/CHANGES
+++ b/tzinfo/CHANGES
@@ -1,4 +1,4 @@
-== Version ?????? (tzdata v2010h) - ???????????
+== Version 0.3.19 (tzdata v2010h) - 5-Apr-2010
 
 * Updated to tzdata version 2010h
   (http://article.gmane.org/gmane.comp.time.tz/3188).
