Updated to tzdata version 2010i (http://article.gmane.org/gmane.comp.time.tz/3202).

--- a/tzinfo/CHANGES
+++ b/tzinfo/CHANGES
@@ -1,3 +1,9 @@
+== Version ?????? (tzdata v2010i) - ??????????
+
+* Updated to tzdata version 2010i
+  (http://article.gmane.org/gmane.comp.time.tz/3202).
+
+
 == Version 0.3.19 (tzdata v2010h) - 5-Apr-2010
 
 * Updated to tzdata version 2010h
