--- a/tzinfo/CHANGES
+++ b/tzinfo/CHANGES
@@ -1,4 +1,4 @@
-== Version ?????? (tzdata v2010i) - ??????????
+== Version 0.3.20 (tzdata v2010i) - 19-Apr-2010
 
 * Updated to tzdata version 2010i
   (http://article.gmane.org/gmane.comp.time.tz/3202).
