Ruby 1.9.2 has deprecated "require 'rational'", but older versions of Ruby need rational to be required. Require rational only when the Rational module has not already been loaded.

--- a/tzinfo/CHANGES
+++ b/tzinfo/CHANGES
@@ -3,7 +3,11 @@
 * Updated to tzdata version 2010j
   (http://article.gmane.org/gmane.comp.time.tz/3225).
 * Change invalid timezone check to exclude characters not used in timezone
-  identifiers and avoid 'character class has duplicated range' warnings.
+  identifiers and avoid 'character class has duplicated range' warnings with
+  Ruby 1.9.2.
+* Ruby 1.9.2 has deprecated "require 'rational'", but older versions of
+  Ruby need rational to be required. Require rational only when the Rational
+  module has not already been loaded.
 
 
 == Version 0.3.20 (tzdata v2010i) - 19-Apr-2010
