--- a/tzinfo/CHANGES
+++ b/tzinfo/CHANGES
@@ -1,4 +1,4 @@
-== Version ?????? (tzdata v2010j) - ???????????
+== Version 0.3.21 (tzdata v2010j) - 28-May-2010
 
 * Updated to tzdata version 2010j
   (http://article.gmane.org/gmane.comp.time.tz/3225).
