--- a/tzinfo/CHANGES
+++ b/tzinfo/CHANGES
@@ -1,3 +1,8 @@
+== Version 0.3.22 (tzdata v2010j) - 29-May-2010
+
+* Corrected file permissions issue with 0.3.21 release.
+
+
 == Version 0.3.21 (tzdata v2010j) - 28-May-2010
 
 * Updated to tzdata version 2010j
