Updated to tzdata version 2010l (http://article.gmane.org/gmane.comp.time.tz/3354).

--- a/tzinfo/CHANGES
+++ b/tzinfo/CHANGES
@@ -1,7 +1,7 @@
-== Version ?????? (tzdata v2010k) - ???????????
+== Version ?????? (tzdata v2010l) - ???????????
 
-* Updated to tzdata version 2010k
-  (http://article.gmane.org/gmane.comp.time.tz/3337).
+* Updated to tzdata version 2010l
+  (http://article.gmane.org/gmane.comp.time.tz/3354).
 
 
 == Version 0.3.22 (tzdata v2010j) - 29-May-2010
