--- a/tzinfo/CHANGES
+++ b/tzinfo/CHANGES
@@ -1,4 +1,4 @@
-== Version ?????? (tzdata v2010l) - ???????????
+== Version 0.3.23 (tzdata v2010l) - 19-Aug-2010
 
 * Updated to tzdata version 2010l
   (http://article.gmane.org/gmane.comp.time.tz/3354).
