Updated to tzdata version 2010m (http://article.gmane.org/gmane.comp.time.tz/3393).

--- a/tzinfo/CHANGES
+++ b/tzinfo/CHANGES
@@ -1,3 +1,8 @@
+== Version ?????? (tzdata v2010m) - ???????????
+
+* Updated to tzdata version 2010m
+  (http://article.gmane.org/gmane.comp.time.tz/3393).
+
 == Version 0.3.23 (tzdata v2010l) - 19-Aug-2010
 
 * Updated to tzdata version 2010l
