Updated to tzdata version 2010o (http://article.gmane.org/gmane.comp.time.tz/3473).

--- a/tzinfo/CHANGES
+++ b/tzinfo/CHANGES
@@ -1,7 +1,7 @@
-== Version ?????? (tzdata v2010n) - ???????????
+== Version ?????? (tzdata v2010o) - ???????????
 
-* Updated to tzdata version 2010n
-  (http://article.gmane.org/gmane.comp.time.tz/3445).
+* Updated to tzdata version 2010o
+  (http://article.gmane.org/gmane.comp.time.tz/3473).
 
 == Version 0.3.23 (tzdata v2010l) - 19-Aug-2010
 
