--- a/tzinfo/CHANGES
+++ b/tzinfo/CHANGES
@@ -1,7 +1,8 @@
-== Version ?????? (tzdata v2010o) - ???????????
+== Version 0.3.24 (tzdata v2010o) - 15-Jan-2011
 
 * Updated to tzdata version 2010o
   (http://article.gmane.org/gmane.comp.time.tz/3473).
+
 
 == Version 0.3.23 (tzdata v2010l) - 19-Aug-2010
 
