Updated to tzdata version 2011c (http://article.gmane.org/gmane.comp.time.tz/3651).

--- a/tzinfo/CHANGES
+++ b/tzinfo/CHANGES
@@ -1,7 +1,7 @@
-== Version ?????? (tzdata v2011b) - ???????????
+== Version ?????? (tzdata v2011c) - ???????????
 
-* Updated to tzdata version 2011b
-  (http://article.gmane.org/gmane.comp.time.tz/3599).
+* Updated to tzdata version 2011c
+  (http://article.gmane.org/gmane.comp.time.tz/3651).
 
 
 == Version 0.3.24 (tzdata v2010o) - 15-Jan-2011
