Updated to tzdata version 2011d (http://article.gmane.org/gmane.comp.time.tz/3662).

--- a/tzinfo/CHANGES
+++ b/tzinfo/CHANGES
@@ -1,7 +1,7 @@
-== Version ?????? (tzdata v2011c) - ???????????
+== Version ?????? (tzdata v2011d) - ???????????
 
-* Updated to tzdata version 2011c
-  (http://article.gmane.org/gmane.comp.time.tz/3651).
+* Updated to tzdata version 2011d
+  (http://article.gmane.org/gmane.comp.time.tz/3662).
 
 
 == Version 0.3.24 (tzdata v2010o) - 15-Jan-2011
