--- a/tzinfo/CHANGES
+++ b/tzinfo/CHANGES
@@ -1,4 +1,4 @@
-== Version ?????? (tzdata v2011d) - ???????????
+== Version 0.3.25 (tzdata v2011d) - 14-Mar-2011
 
 * Updated to tzdata version 2011d
   (http://article.gmane.org/gmane.comp.time.tz/3662).
