--- a/tzinfo/CHANGES
+++ b/tzinfo/CHANGES
@@ -1,7 +1,8 @@
-== Version ?????? (tzdata v2011e) - ???????????
+== Version 0.3.26 (tzdata v2011e) - 2-Apr-2011
 
 * Updated to tzdata version 2011e
   (http://article.gmane.org/gmane.comp.time.tz/3707).
+
 
 == Version 0.3.25 (tzdata v2011d) - 14-Mar-2011
 
