--- a/tzinfo/CHANGES
+++ b/tzinfo/CHANGES
@@ -1,3 +1,9 @@
+== Version ?????? (tzdata v2011g) - ??????????
+
+* Updated to tzdata version 2011g
+  (http://article.gmane.org/gmane.comp.time.tz/3758).
+
+
 == Version 0.3.26 (tzdata v2011e) - 2-Apr-2011
 
 * Updated to tzdata version 2011e
