--- a/tzinfo/CHANGES
+++ b/tzinfo/CHANGES
@@ -1,4 +1,4 @@
-== Version ?????? (tzdata v2011g) - ??????????
+== Version 0.3.27 (tzdata v2011g) - 26-Apr-2011
 
 * Updated to tzdata version 2011g
   (http://article.gmane.org/gmane.comp.time.tz/3758).
