--- a/tzinfo/CHANGES
+++ b/tzinfo/CHANGES
@@ -1,4 +1,4 @@
-== Version ?????? (tzdata v2011h) - ???????????
+== Version 0.3.29 (tzdata v2011h) - 27-Jun-2011
 
 * Updated to tzdata version 2011h
   (http://article.gmane.org/gmane.comp.time.tz/3814).
