Update CHANGES for tzdata v2011k.

--- a/tzinfo/CHANGES
+++ b/tzinfo/CHANGES
@@ -1,7 +1,7 @@
-== Version ?????? (tzdata v2011i) - ???????????
+== Version ?????? (tzdata v2011k) - ???????????
 
-* Updated to tzdata version 2011i
-  (http://article.gmane.org/gmane.comp.time.tz/3949).
+* Updated to tzdata version 2011k
+  (http://article.gmane.org/gmane.comp.time.tz/4084).
 
 
 == Version 0.3.29 (tzdata v2011h) - 27-Jun-2011
