--- a/tzinfo/CHANGES
+++ b/tzinfo/CHANGES
@@ -1,4 +1,4 @@
-== Version ?????? (tzdata v2011k) - ???????????
+== Version 0.3.30 (tzdata v2011k) - 29-Sep-2011
 
 * Updated to tzdata version 2011k
   (http://article.gmane.org/gmane.comp.time.tz/4084).
