Updated to tzdata version 2011l (http://article.gmane.org/gmane.comp.time.tz/4199).

--- a/tzinfo/CHANGES
+++ b/tzinfo/CHANGES
@@ -1,3 +1,9 @@
+== Version ?????? (tzdata v2011l) - 16-Oct-2011
+
+* Updated to tzdata version 2011l
+  (http://article.gmane.org/gmane.comp.time.tz/4199).
+
+
 == Version 0.3.30 (tzdata v2011k) - 29-Sep-2011
 
 * Updated to tzdata version 2011k
