--- a/tzinfo/CHANGES
+++ b/tzinfo/CHANGES
@@ -1,7 +1,7 @@
-== Version ?????? (tzdata v2011l) - 16-Oct-2011
+== Version ?????? (tzdata v2011n) - 16-Oct-2011
 
-* Updated to tzdata version 2011l
-  (http://article.gmane.org/gmane.comp.time.tz/4199).
+* Updated to tzdata version 2011n
+  (http://article.gmane.org/gmane.comp.time.tz/4434).
 
 
 == Version 0.3.30 (tzdata v2011k) - 29-Sep-2011
