--- a/tzinfo/CHANGES
+++ b/tzinfo/CHANGES
@@ -1,4 +1,4 @@
-== Version ?????? (tzdata v2011n) - 16-Oct-2011
+== Version 0.3.31 (tzdata v2011n) - 6-Nov-2011
 
 * Updated to tzdata version 2011n
   (http://article.gmane.org/gmane.comp.time.tz/4434).
