Updated to tzdata version 2012b (http://article.gmane.org/gmane.comp.time.tz/4756).

--- a/tzinfo/CHANGES
+++ b/tzinfo/CHANGES
@@ -1,3 +1,9 @@
+== Version ?????? (tzdata v2012b) - ??????????
+
+* Updated to tzdata version 2012b
+  (http://article.gmane.org/gmane.comp.time.tz/4756).
+
+
 == Version 0.3.31 (tzdata v2011n) - 6-Nov-2011
 
 * Updated to tzdata version 2011n
