--- a/tzinfo/CHANGES
+++ b/tzinfo/CHANGES
@@ -1,4 +1,4 @@
-== Version ?????? (tzdata v2012b) - ??????????
+== Version 0.3.32 (tzdata v2012b) - 4-Mar-2012
 
 * Updated to tzdata version 2012b
   (http://article.gmane.org/gmane.comp.time.tz/4756).
