--- a/tzinfo/CHANGES
+++ b/tzinfo/CHANGES
@@ -1,4 +1,4 @@
-== Version ?????? (tzdata v2012c) - ??????????
+== Version 0.3.33 (tzdata v2012c) - 8-Apr-2012
 
 * Updated to tzdata version 2012c
   (http://article.gmane.org/gmane.comp.time.tz/4859).
