Updated to tzdata version 2012e (http://mm.icann.org/pipermail/tz-announce/2012-August/000002.html).

--- a/tzinfo/CHANGES
+++ b/tzinfo/CHANGES
@@ -1,3 +1,9 @@
+== Version ?????? (tzdata v2012e) - ??????????
+
+* Updated to tzdata version 2012e
+  (http://mm.icann.org/pipermail/tz-announce/2012-August/000002.html).
+
+
 == Version 0.3.33 (tzdata v2012c) - 8-Apr-2012
 
 * Updated to tzdata version 2012c
