--- a/tzinfo/CHANGES
+++ b/tzinfo/CHANGES
@@ -1,7 +1,7 @@
-== Version ?????? (tzdata v2012g) - ??????????
+== Version ?????? (tzdata v2012h) - ??????????
 
-* Updated to tzdata version 2012g
-  (http://mm.icann.org/pipermail/tz-announce/2012-October/000005.html).
+* Updated to tzdata version 2012h 
+  (http://mm.icann.org/pipermail/tz-announce/2012-October/000006.html).
 
 
 == Version 0.3.33 (tzdata v2012c) - 8-Apr-2012
