--- a/tzinfo/CHANGES
+++ b/tzinfo/CHANGES
@@ -1,6 +1,6 @@
-== Version ?????? (tzdata v2012h) - ??????????
+== Version 0.3.34 (tzdata v2012h) - 27-Oct-2012
 
-* Updated to tzdata version 2012h 
+* Updated to tzdata version 2012h
   (http://mm.icann.org/pipermail/tz-announce/2012-October/000006.html).
 
 
