--- a/tzinfo/CHANGES
+++ b/tzinfo/CHANGES
@@ -1,4 +1,4 @@
-== Version ?????? (tzdata v2012i) - ???????????
+== Version 0.3.35 (tzdata v2012i) - 4-Nov-2012
 
 * Updated to tzdata version 2012i
   (http://mm.icann.org/pipermail/tz-announce/2012-November/000007.html).
