--- a/CHANGES
+++ b/CHANGES
@@ -9,6 +9,8 @@
   a separate TZInfo Data library (available as the tzinfo-data gem).
 * Default to using the TZInfo Data library as the data source if it is 
   installed, otherwise use zoneinfo files instead.
+* Preserve the nanoseconds of local timezone Time objects when performing 
+  conversions (issue #29705).
 * Don't add the tzinfo lib directory to the search path when requiring 'tzinfo'.
   The tzinfo lib directory must now be in the search path before 'tzinfo' is
   required.
