--- a/tzinfo/CHANGES
+++ b/tzinfo/CHANGES
@@ -1,4 +1,4 @@
-== Version ?????? (tzdata v2013a) - ??????????
+== Version 0.3.36 (tzdata v2013a) - 3-Mar-2013
 
 * Updated to tzdata version 2013a
   (http://mm.icann.org/pipermail/tz-announce/2013-March/000009.html).
