--- a/tzinfo/CHANGES
+++ b/tzinfo/CHANGES
@@ -1,6 +1,6 @@
-== Version ?????? (tzdata v2013b) - ??????????
+== Version 0.3.37 (tzdata v2013b) - 11-Mar-2013
 
-* Updated to tzdata version 2013a
+* Updated to tzdata version 2013b
   (http://mm.icann.org/pipermail/tz-announce/2013-March/000010.html).
 
 
